# simple-raytracer

./: .gitignore  CMakeLists.txt  INSTALL.TXT  LICENSE  readme.txt
src/: main.cpp  raytrace.pro  raytracewindow.cpp  raytracewindow.h  rtscene.cpp  rtscene.h  sedes.cpp  sedes.h
src/gui/: lightdialog.cpp  lightdialog.h  lightdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialdialog.cpp  materialdialog.h  materialdialog.ui  objectdialog.cpp  objectdialog.h  objectdialog.ui  texturedialog.cpp  texturedialog.h  texturedialog.ui
src/kdtree/: rtkdnode.cpp  rtkdnode.h  rtkdsplitplane.cpp  rtkdsplitplane.h  rtkdtree.cpp  rtkdtree.h
src/lights/: lightsCommon.h  rtlight.cpp  rtlight.h
src/materials/: materialsCommon.h  rtmaterial.cpp  rtmaterial.h
src/objects/: objectsCommon.h  rtconeobject.cpp  rtconeobject.h  rtcylinderobject.cpp  rtcylinderobject.h  rtdiskobject.cpp  rtdiskobject.h  rtobject.cpp  rtobject.h  rtplaneobject.cpp  rtplaneobject.h  rtpolyobject.cpp  rtpolyobject.h  rtquadobject.cpp  rtquadobject.h  rtsphereobject.cpp  rtsphereobject.h
src/textures/: rtimagetexture.cpp  rtimagetexture.h  rtmasktexture.cpp  rtmasktexture.h  rtnormalmap.cpp  rtnormalmap.h  rtsolidcolortexture.cpp  rtsolidcolortexture.h  rttexture.cpp  rttexture.h  textureCommon.h
src/utils/: color3.cpp  color3.h  filters.cpp  filters.h  geometry.cpp  geometry.h  matrix3x3d.cpp  matrix3x3d.h  rtbbox.cpp  rtbbox.h  utilsCommon.h
